--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ body {
 
 
 
-body{background:#1b1d1e}body #terminal{color:#bbb}body #user{color:#23e298}body #dir{color:#d08010}body .Typewriter__cursor{color:#bbb}a{color:#bbb}</style>
+body{background:#1E1E2E}body #terminal{color:#D9E0EE}body #user{color:#ABE9B3}body #dir{color:#F8BD96}body .Typewriter__cursor{color:#D9E0EE}a{color:#D9E0EE}</style>
+
 
 </head><body><div id="content">
     
