--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Kartograf - Charting the unknown...</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Jane Doe&#39;s Portfolio!" />
+    <meta name="description" content="Kartograf&#39;s Website" />
     <style>
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata&display=swap");
 :root {
@@ -72,8 +72,7 @@ body {
 
 
 
-body{background:#1b1d1e}body #terminal{color:#bbb}body #user{color:#23e298}body #dir{color:#d08010}body .Typewriter__cursor{color:#bbb}a{color:#bbb}</style>
-
+body{background:#1E1E2E}body #terminal{color:#D9E0EE}body #user{color:#ABE9B3}body #dir{color:#F8BD96}body .Typewriter__cursor{color:#D9E0EE}a{color:#D9E0EE}</style>
 </head><body><div id="content">
     
     
